subo vista recomendados

--- a/PruebaMongo/Views/Shared/_Layout.cshtml
+++ b/PruebaMongo/Views/Shared/_Layout.cshtml
@@ -1,6 +1,3 @@
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,7 +18,7 @@
                     
                     <div class="d-flex flex-row">
                     <a href="" class="nav-link text-dark ">
-                            <img src="/Assets/mail.png" alt="email icono" class="px-2" width="40px">hola@hshTucasa.net
+                            <img src="/Assets/mail.png" alt="email icono" class="px-2" width="40">hola@hshTucasa.net
                         </a>
                     </div>
                     <div class="d-flex flex-row pt-2 pt-lg-0 mx-0 mx-lg-4">
@@ -50,7 +47,7 @@
                     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Property" asp-action="listar">Recomendadas</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Property" asp-action="ShowRecommended">Recomendadas</a>
                             </li>
                             <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Property" asp-action="Favoritos">Favoritos <img width="15" src="/Assets/filled-star.svg" /></a>
