--- a/PruebaMongo/Views/Property/Listar.cshtml
+++ b/PruebaMongo/Views/Property/Listar.cshtml
@@ -7,6 +7,12 @@
 
 
 <div class="container my-5">
+
+    @if (TempData["Mensaje"] != null)
+    {
+        <div class="alert alert-success">@TempData["Mensaje"]</div>
+    }
+
 @if (Model.Count > 0)
 {
      <h1>Propiedades destacadas</h1>
